--- a/src/markdown.ejs
+++ b/src/markdown.ejs
@@ -11,7 +11,7 @@
     <% } %>
   </head>
   <body>
-    <div id="app" style="height: 100%; width: 100%"></div>
+    <div id="app"></div>
     <!-- Set `__static` path to static files in production -->
     <script>
       if (process.env.NODE_ENV !== 'development') window.__static = require('path').join(__dirname, '/static').replace(/\\/g, '\\\\')
